<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/selectimage"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/blue"
        android:textColorLink="@color/blue" />
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_weight="0.5"
	    android:gravity="bottom"
	    android:orientation="vertical" >

		<ListView
		    android:id="@+id/dialigselectimageListView"
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:layout_weight="0.9" />

    <ImageView
        android:id="@+id/imageViewFileName"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_weight="0.1" />

	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="0.05"
	    android:orientation="horizontal" >

		<Button
		    android:id="@+id/dialogselectimageOpen"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.5"
		    android:text="@string/open" />

		<Button
		    android:id="@+id/dialogselectimageNew"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.5"
		    android:text="@string/new_image" />
		
	</LinearLayout>
	
</LinearLayout>

