<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<ImageView
		android:id="@+id/ImageViewColor"
		android:layout_width="match_parent"
		android:layout_height="100dp"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
		    android:id="@+id/textView1"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.37"
		    android:text="@string/red"
		    android:textAppearance="?android:attr/textAppearanceMedium" />

		<SeekBar
			android:id="@+id/seekBarRed"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="0.13"/>

		<TextView
			android:id="@+id/textViewRed"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="0.4"
			android:text="100"
			android:textAppearance="?android:attr/textAppearanceMedium"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
		    android:id="@+id/textView2"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.37"
		    android:text="@string/yellow"
		    android:textAppearance="?android:attr/textAppearanceMedium" />

		<SeekBar
			android:id="@+id/seekBarYellow"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="0.13"/>

		<TextView
			android:id="@+id/textViewYellow"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="0.4"
			android:text="100"
			android:textAppearance="?android:attr/textAppearanceMedium"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
		    android:id="@+id/textView3"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.37"
		    android:text="@string/blue"
		    android:textAppearance="?android:attr/textAppearanceMedium" />

		<SeekBar
			android:id="@+id/seekBarBlue"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="0.13"/>

		<TextView
			android:id="@+id/textViewBlue"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="0.4"
			android:text="100"
			android:textAppearance="?android:attr/textAppearanceMedium"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
		    android:id="@+id/textView4"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.37"
		    android:text="@string/white"
		    android:textAppearance="?android:attr/textAppearanceMedium" />

		<SeekBar
			android:id="@+id/seekBarWhite"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="0.13"/>

		<TextView
			android:id="@+id/textViewWhite"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="0.4"
			android:text="100"
			android:textAppearance="?android:attr/textAppearanceMedium"/>

	</LinearLayout>

	<ListView
	    android:id="@+id/listViewColors"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_weight="1" >
	</ListView>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<Button
		    android:id="@+id/buttonToColors"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/SetToBrush" />

<!-- 
		<Button
			android:id="@+id/buttonToPalette"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Set to palette"/>
 -->
	</LinearLayout>

</LinearLayout>

